# gptchess

./: .env  chess_dspy.py  chess_dspy_compile.py  chess_dspy_distill_ft_data.py  chess_dspy_moa.py  chess_finetuning_correct_examples.jsonl  chess_finetuning_sample.jsonl  chess_finetuning_train.jsonl  chess_finetuning_train_sample.jsonl  chess_finetuning_val.jsonl  chess_puzzles_visualization.html  compiled_chess.dspy  compiled_chess_cot.dspy  compiled_chess_cot_ft_student.dspy  create_ft_data.bak.py  create_ft_data.py  eval_ft.py  eval_ft_single.py  inspect_history.txt  lichess_db_puzzle.csv.zst  num_tokens.py  pyproject.toml  readme.md  sample_jsonl.py  test.py  visualize.py
checkpoints/: chess_fewshot_cot_1.json  chess_fewshot_cot_2.json  chess_fewshot_cot_3.json  chess_fewshot_cot_4.json  chess_fewshot_cot_5.json
chess_problems/: chess_finetuning_1500_train.jsonl  chess_finetuning_1500_val.jsonl  chess_finetuning_all_val.jsonl  chess_finetuning_correct_examples.jsonl  chess_finetuning_gpt4o_ft_correct_examples.jsonl
